<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".GoogleOrGuestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/green_dark">

        <Button
            android:id="@+id/buttonUseGoogleAccount"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_use_google_account"
            android:contentDescription="@string/icon_use_google_account" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/use_google_account"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue_dark">

        <Button
            android:id="@+id/buttonUseGuestAccount"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_use_guest_account"
            android:contentDescription="@string/icon_use_guest_account" />

        <TextView
            android:id="@+id/textViewLeaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/continue_as_guest"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>