<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOptionsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25 "
        android:background="@color/blue_dark"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleFlashButtons"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="38dp"
            android:background="@drawable/toggle_button"
            android:checked="true"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="32dp"
            android:text="@string/flash_buttons"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.25"
        android:background="@color/blue_dark"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/togglePlayTunes"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="38dp"
            android:background="@drawable/toggle_button"
            android:checked="true"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="32dp"
            android:text="@string/play_tunes"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/yellow_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStartGame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_start_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/start_game"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>